// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variables basic typescript snapshot 1`] = `
"import * as constructs from \\"constructs\\";
import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as local from \\"./.gen/providers/local\\";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const imageId = new cdktf.TerraformVariable(this, \\"image_id\\", {
      type: cdktf.VariableType.STRING,
    });
    new local.dataLocalFile.DataLocalFile(this, \\"foo\\", {
      filename: \\"./\${\\" + imageId.value + \\"}.img\\",
    });
  }
}
"
`;

exports[`variables complex type and default typescript snapshot 1`] = `
"import * as constructs from \\"constructs\\";
import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as local from \\"./.gen/providers/local\\";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const dockerPorts = new cdktf.TerraformVariable(this, \\"docker_ports\\", {
      default: [
        {
          external: 8300,
          internal: 8300,
          protocol: \\"tcp\\",
        },
      ],
      type: cdktf.VariableType.list(
        cdktf.VariableType.object({
          external: cdktf.VariableType.NUMBER,
          internal: cdktf.VariableType.NUMBER,
          protocol: cdktf.VariableType.STRING,
        })
      ),
    });
    new local.dataLocalFile.DataLocalFile(this, \\"foo\\", {
      filename: \\"./\${\\" + (\\"\${\\" + dockerPorts.value + \\"}[0].protocol\\") + \\"}.img\\",
    });
  }
}
"
`;

exports[`variables sensitive and required typescript snapshot 1`] = `
"import * as constructs from \\"constructs\\";
import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as local from \\"./.gen/providers/local\\";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const userInformation = new cdktf.TerraformVariable(
      this,
      \\"user_information\\",
      {
        nullable: false,
        sensitive: true,
        type: cdktf.VariableType.object({
          address: cdktf.VariableType.STRING,
          name: cdktf.VariableType.STRING,
        }),
      }
    );
    new local.dataLocalFile.DataLocalFile(this, \\"foo\\", {
      filename: \\"./\${\\" + (\\"\${\\" + userInformation.value + \\"}.name\\") + \\"}.img\\",
    });
  }
}
"
`;

exports[`variables validations typescript snapshot 1`] = `
"import * as constructs from \\"constructs\\";
import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as local from \\"./.gen/providers/local\\";
class MyConvertedCode extends cdktf.TerraformStack {
  constructor(scope: constructs.Construct, name: string) {
    super(scope, name);
  }
}
"
`;
